welcome.lessons.welcome.loopfor.LoopCourse.scala.error
Runner:7: error: reassignment to val
    c=c+1
     ^Runner:9: error: reassignment to val
  t=t+1
   ^