welcome.lessons.welcome.loopfor.LoopCourse.scala.code
for (t<- 1 to 10) {
  for(c<- 1 to 4) {
    while (!estFaceMur()) {
      avance()
    }
    gauche()
    c=c+1
  }
  t=t+1
}
